# mdbook-bibfile-referencing

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: rust.yml
docker/: Dockerfile
src/: main.rs  test.rs
test-book/: book.toml
test-book/src/: bibliography.bib  chapter_1.md  ieee.csl
