[package]
name = "mdbook-bibfile-referencing"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"
repository = "https://github.com/jacob-pro/mdbook-bibfile-referencing"
homepage = "https://github.com/jacob-pro/mdbook-bibfile-referencing"
license = "LGPL-2.1"
description = "An mdBook preprocessor to add bibfile referencing to each page "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
mdbook = { version = "0.4.4", default-features = false }
pandoc = "0.8.5"
serde = "1.0.118"
serde_json = "1.0.61"
version-compare = "0.0.10"
