[package]
name = "mdbook-bibfile-referencing"
version = "0.2.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"
repository = "https://github.com/jacob-pro/mdbook-bibfile-referencing"
homepage = "https://github.com/jacob-pro/mdbook-bibfile-referencing"
license = "LGPL-2.1"
description = "An mdBook preprocessor to add bibfile referencing to each page "

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"] }
mdbook = { version = "0.4.4", default-features = false }
pandoc = "0.8.5"
serde = "1.0.118"
serde_json = "1.0.61"
version-compare = "0.1.0"
