[package]
name = "mdbook-bibfile-referencing"
version = "0.2.1"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2021"
repository = "https://github.com/jacob-pro/mdbook-bibfile-referencing"
homepage = "https://github.com/jacob-pro/mdbook-bibfile-referencing"
license = "LGPL-2.1"
description = "An mdBook preprocessor to add bibfile referencing to each page "

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
mdbook = { version = "0.4.21", default-features = false }
pandoc = "0.8.10"
serde = "1.0.147"
serde_json = "1.0.87"
version-compare = "0.1.0"
